no longer using PokemonOptionsOverlay and instead using SelectChip for desktop and touch and hold on mobile

--- a/frontend/src/pages/Pokemon/components/Menus/PokemonMenu/PokemonOptionsOverlay.css
+++ b/frontend/src/pages/Pokemon/components/Menus/PokemonMenu/PokemonOptionsOverlay.css
@@ -188,7 +188,7 @@
 @media (min-width: 768px) and (max-width: 1023px) {
   .action-column .scale-container {
     /* Use zoom instead of transform scale so that the element’s box shrinks */
-    zoom: 0.75;
+    zoom: 0.6;
     /* Remove any transform or negative margins */
     transform: none;
     margin: 0;
@@ -198,7 +198,7 @@
 @media (min-width: 1024px) and (max-width: 1439px) {
   .action-column .scale-container {
     /* Use zoom instead of transform scale so that the element’s box shrinks */
-    zoom: 0.85;
+    zoom: 0.65;
     /* Remove any transform or negative margins */
     transform: none;
     margin: 0;
